# automatron

./: .clang-format  CMakeLists.txt  README.md  compile_flags.txt
src/: defs.h  main.c
src/gui/: alphabet.c  alphabet.h  automaton.c  automaton.h  debug.c  debug.h  diagram.c  diagram.h  grammar.c  grammar.h  language.c  language.h  transitions.c  transitions.h
src/logic/: alphabet.c  alphabet.h  automaton.c  automaton.h  grammar.c  grammar.h  language.c  language.h  transitions.c  transitions.h  util.c  util.h
